finished app, test more tomorrow

--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
     <div class="container" id="main-content"></div>
 
     <!-- Timeblocks go here -->
+    <div class="container container-fluid">
+      <div class="row justify-content-center">
+        <button
+          type="button"
+          class="fw-bolder btn btn-danger col-12"
+          id="clear-button"
+        >
+          Clear
+        </button>
+      </div>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
